--- a/pages/home/home.wxml
+++ b/pages/home/home.wxml
@@ -7,7 +7,7 @@
   <input placeholder="请输入关键字搜索" />
 </view>
 <view class="remind">附近有20位跑手，预计8分钟接单</view>
-<l-tabs l-class-header="swipeable-header" l-class-inactive="swipeable-class-inactive" l-class-line="line-class" l-class-active="swipeable-class-active" active-key="one" swipeable="{{true}}" has-line="{{true}}" animated-for-line="{{true}}" content-height="{{contentHeight}}">
+<l-tabs l-class-header="swipeable-header" l-class-inactive="swipeable-class-inactive" l-class-line="line-class" l-class-active="swipeable-class-active" active-key="one" swipeable="{{false}}" has-line="{{true}}" animated-for-line="{{true}}" content-height="{{contentHeight}}">
   <l-tabpanel tab="下单" key="one" slot="one">
     <scroll-view class="tab-content" scroll-y="true">
       <view class="place-item" wx:for="{{orderPlacingList}}" wx:key="id">
@@ -17,7 +17,7 @@
           <view class="place-item-title">{{item.title}}</view>
           <view class="place-item-status">
             <view class="place-item-time">{{item.publishTime}}</view>
-            <view class="place-item-status" style="color: {{item.deliveryInfo == null ? '#8a8a8a' : item.type == 1 ? '#4797F8' : '#F297F8'}};">{{item.deliveryInfo == null ? "待接单" : "已接单"}}</view>
+            <view class="place-item-status" style="color: {{item.status == 1 ? '#8a8a8a' : '#4797F8'}};">{{item.deliveryInfo == null ? "待处理" : "配送中"}}</view>
           </view>
         </view>
       </view>
@@ -31,7 +31,7 @@
           <view class="take-item-title">{{item.title}}</view>
           <view class="take-item-desc">{{item.content}}</view>
           <view class="take-item-time">发布时间：{{item.publishTime}}</view>
-          <view class="take-item-time">送达时间：{{item.deadlineTime}}</view>
+          <view class="take-item-time">要求时间：{{item.deadlineTime}}</view>
         </view>
         <view wx:if="{{item.type == 1}}" class="take-item-type-1">取</view>
         <view wx:else class="take-item-type-2">买</view>
