--- a/pages/mine/mine.wxss
+++ b/pages/mine/mine.wxss
@@ -1,1 +1,149 @@
 /* pages/mine/mine.wxss */
+
+page {
+  background-color: #F1F1F1;
+}
+
+.header {
+  margin: 30rpx;
+  background-color: #FFFFFF;
+  height: 140rpx;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border-radius: 6rpx;
+}
+
+.header image {
+  margin-left: 40rpx;
+  width: 100rpx;
+  height: 100rpx;
+  border-radius: 50%;
+}
+
+.header view {
+  margin-left: 40rpx;
+  font-size: 40rpx;
+  color: #101010;
+}
+
+.identity-bg {
+  margin: 30rpx;
+  height: 80rpx;
+  background: linear-gradient(to right, #371c0e, #8f6955);
+  border-radius: 6rpx;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.identity-tip {
+  margin-left: 20rpx;
+  display: flex;
+  flex-direction: row;
+}
+
+.identity-tip image {
+  width: 40rpx;
+  height: 40rpx;
+}
+
+.identity-tip view {
+  margin-left: 10rpx;
+  color: #d0ba6e;
+  font-size: 28rpx;
+}
+
+.identity-btn {
+  margin-right: 20rpx;
+  width: 160rpx;
+  height: 50rpx;
+  border-radius: 25rpx;
+  background-color: #d0ba6e;
+  color: #371c0e;
+  line-height: 50rpx;
+  text-align: center;
+  font-size: 28rpx;
+}
+
+.content-view {
+  margin: 30rpx;
+  background-color: #FFFFFF;
+  border-radius: 10rpx;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 60rpx;
+}
+
+.content-view-header {
+  width: 100%;
+  height: 160rpx;
+  display: flex;
+  flex-direction: row;
+  border-bottom: 1rpx solid #dedede;
+}
+
+.content-view-header-item {
+  flex: 1;
+  height: 100%;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+}
+
+.content-view-header-item:first-child {
+  border-right: 1rpx solid #dedede;
+}
+
+.content-view-header-item image {
+  width: 70rpx;
+  height: 70rpx;
+}
+
+.content-view-header-item-content {
+  margin-left: 20rpx;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.content-view-header-item-content-top {
+  font-size: 48rpx;
+  color: #d0ba6e;
+}
+
+.content-view-header-item-content-bottom {
+  font-size: 28rpx;
+  color: #d0ba6e;
+}
+
+.content-view-item {
+  position: relative;
+  width: 600rpx;
+  height: 80rpx;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  border-bottom: 1rpx solid #dedede;
+}
+
+.content-view-item-icon {
+  width: 40rpx;
+  height: 40rpx;
+}
+
+.content-view-item view {
+  margin-left: 10rpx;
+  font-size: 28rpx;
+  color: #101010;
+}
+
+.content-view-item-arrow {
+  position: absolute;
+  right: 10rpx;
+  width: 30rpx;
+  height: 30rpx;
+}
